--- a/index.Rmd
+++ b/index.Rmd
@@ -1,24 +1,25 @@
 ---
 title: |
   <center>
-  ![](title_page.png){width=40%}<br> 
+  ![](title_page.png){width=33%}<br> 
   <br>Többváltozós Adatelemzési Modellek R Jegyzet<br>
   Budapesti Corvinus Egyetem<br>
   Üzleti adatelemző szakirányú továbbképzés
   </center> 
+author: 'Kovács László'
 output: html_document
-date: '2022.08.18.'
+date: '2022.08.19.'
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## 1. téma: <a href="Statisztikai Alapfogalmak.pdf" target="_blank">Statisztikai Alapfogalmak</a>
+## 1. téma: <a href="Statisztikai Alapfogalmak.pdf" target="_blank">Statisztikai Alapfogalmak (prezentáció)</a>
 
 ## 2. téma: <a href="Gyak01.html" target="_blank">R Bevezetés</a>
 
-## 3. téma: <a href="Gyak02.html" target="_blank">Leíró statisztikai eszközök R-ben</a>
+## 3. téma: <a href="Gyak02.html" target="_blank">Leíró statisztikai eszközök</a>
 
 ## 4. téma: <a href="Gyak03.html" target="_blank">Intervallumbecslés és Hipotézisvizsgálat</a>
 
